# Zurcher-JAX

./: README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/zurcher_jax/: nfxp.py
tests/: test_zurcher.py
