[project]
name = "Zurcher-JAX"
version = "0.1.0"
description = "Implementation of a nested-fixed point algorithm for the empirical model of Optimal Replacement of GMC bus engines for Harold Zurcher by John Rust"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.7.2",
    "jaxopt>=0.8.5",
    "simple-pytree>=0.2.2",
    "squarem-jaxopt>=0.1.3",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
pythonPath = "src"

[tool.ruff]
src = ["src"]
